--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <p class="date">Last updated: December 25, 2025</p>
 
     <p>
-      Hemis Afghanistan ("we", "our", or "us") respects your privacy. This Privacy Policy
+      Hemis Afghanistan (we) respects your privacy. This Privacy Policy
       explains how our mobile application, <strong>Hemis Afghanistan</strong>, handles user
       information.
     </p>
